--- a/src/frontend/styles/vars.pcss
+++ b/src/frontend/styles/vars.pcss
@@ -3,6 +3,7 @@
   --color-text-second: #5d6068;
   --color-line-gray: #E8E8EB;
   --color-link-active: #2071cc;
+  --color-link-hover: #F3F6F8;
   --color-button-danger: #ff5159;
   --color-bg-light: #f8f7fa;
   --color-page-active: #ff1767;
